--- a/day20/weather api/index.htm
+++ b/day20/weather api/index.htm
@@ -16,7 +16,7 @@
     <div class="card">
         <div class="search">
             <input type="text" placeholder="   enter city name" spellcheck="false">
-            <button><img src="C:\Users\witni\Desktop\wimg\search.png"></button>
+            <button><img src="https://cdn-icons-png.flaticon.com/512/149/149852.png?w=740&t=st=1690647477~exp=1690648077~hmac=3bd89ec0819b4b1680dc82baec0b9b2cf7cdc6d031c4157268e431f09fc0e3a1"></button>
         </div>
 
         <div class="error">
