--- a/fetch api/index.html
+++ b/fetch api/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-
+<!-- check script .js  -->
 <script src="script.js"></script>
 </body>
 </html>
